--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.3",
