--- a/package.json
+++ b/package.json
@@ -1,27 +1,47 @@
 {
-  "name": "rn-earthquakes",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "rnEarthquakes",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "expo": "~48.0.4",
-    "expo-status-bar": "~1.4.4",
+    "@react-native-community/cli-doctor": "^11.0.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.41",
+    "moment-timezone": "^0.5.42",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-dom-parser": "^1.5.3",
+    "react-native": "0.71.4",
+    "react-native-maps": "^1.4.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.8",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
