--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cli-doctor": "^11.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "moment": "^2.29.4",
@@ -18,7 +19,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "^1.4.0",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
