--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "rnEarthquakes",
-  "displayName": "Zelzele | Son 100 Deprem"
+  "name": "Zelzele | Son 100 Deprem",
+  "displayName": "Zelzele | Son 100 Deprem|Zelzele | Son 100 Deprem"
 }
