--- a/ios/ZelzeleSon100Deprem.xcodeproj/xcshareddata/xcschemes/ZelzeleSon100Deprem.xcscheme
+++ b/ios/ZelzeleSon100Deprem.xcodeproj/xcshareddata/xcschemes/ZelzeleSon100Deprem.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "rnEarthquakes.app"
-               BlueprintName = "rnEarthquakes"
-               ReferencedContainer = "container:rnEarthquakes.xcodeproj">
+               BuildableName = "ZelzeleSon100Deprem.app"
+               BlueprintName = "ZelzeleSon100Deprem"
+               ReferencedContainer = "container:ZelzeleSon100Deprem.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "rnEarthquakesTests.xctest"
-               BlueprintName = "rnEarthquakesTests"
-               ReferencedContainer = "container:rnEarthquakes.xcodeproj">
+               BuildableName = "ZelzeleSon100DepremTests.xctest"
+               BlueprintName = "ZelzeleSon100DepremTests"
+               ReferencedContainer = "container:ZelzeleSon100Deprem.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "rnEarthquakes.app"
-            BlueprintName = "rnEarthquakes"
-            ReferencedContainer = "container:rnEarthquakes.xcodeproj">
+            BuildableName = "ZelzeleSon100Deprem.app"
+            BlueprintName = "ZelzeleSon100Deprem"
+            ReferencedContainer = "container:ZelzeleSon100Deprem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "rnEarthquakes.app"
-            BlueprintName = "rnEarthquakes"
-            ReferencedContainer = "container:rnEarthquakes.xcodeproj">
+            BuildableName = "ZelzeleSon100Deprem.app"
+            BlueprintName = "ZelzeleSon100Deprem"
+            ReferencedContainer = "container:ZelzeleSon100Deprem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
