refactor: Fix android and ios icons, color problem and gradle settings

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "Zelzele | Son 100 Deprem",
-  "displayName": "Zelzele | Son 100 Deprem|Zelzele | Son 100 Deprem"
+  "name": "ZelzeleSon100Deprem",
+  "displayName": "Zelzele | Son 100 Deprem"
 }
