--- a/ios/ZelzeleSon100Deprem/Info.plist
+++ b/ios/ZelzeleSon100Deprem/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Zelzele | Son 100 Deprem</string>
+	<string>ZelzeleSon100Deprem</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
