--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zelzele|son100deprem",
-  "version": "0.0.1",
+  "name": "ZelzeleSon100Deprem",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -19,9 +19,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "^1.4.0",
-    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
