--- a/ios/ZelzeleSon100Deprem/Info.plist
+++ b/ios/ZelzeleSon100Deprem/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ZelzeleSon100Deprem</string>
+	<string>Zelzele | Son 100 Deprem</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -55,19 +55,6 @@
 	<array>
 		<string>Ionicons.ttf</string>
 		<string>AntDesign.ttf</string>
-		<string>FontAwesome.ttf</string>
-		<string>Foundation.ttf</string>
-		<string>MaterialIcons.ttf</string>
-		<string>FontAwesome5_Solid.ttf</string>
-		<string>FontAwesome5_Regular.ttf</string>
-		<string>FontAwesome5_Brands.ttf</string>
-		<string>Fontisto.ttf</string>
-		<string>Octicons.ttf</string>
-		<string>Entypo.ttf</string>
-		<string>MaterialCommunityIcons.ttf</string>
-		<string>Zocial.ttf</string>
-		<string>EvilIcons.ttf</string>
-		<string>SimpleLineIcons.ttf</string>
 	</array>
 </dict>
 </plist>
