--- a/package.json
+++ b/package.json
@@ -12,37 +12,43 @@
   "dependencies": {
     "@react-native-community/cli-doctor": "^11.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.42",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-maps": "^1.4.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^9.2.0",
-    "tailwindcss": "^3.2.7"
+    "react-native": "0.72.3",
+    "react-native-google-mobile-ads": "^11.7.0",
+    "react-native-maps": "^1.7.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.9",
+    "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.8",
+    "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-geocoding": "^0.5.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
