--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.42",
     "nativewind": "^2.0.11",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-google-mobile-ads": "^11.7.0",
